# mlproject

./: .coverage  .dockerignore  Dockerfile  basic_agent.ipynb  main.py  pyproject.toml  requirements.txt
.github/actions/setup/: action.yaml
.github/workflows/: ci.yml  code-quality.yaml
poc/: __init__.py
poc/data/: dummy.csv
poc/src/: __init__.py
poc/src/classification/: __init__.py  config.py  data.py  evaluate.py  model.py  pipeline.py
poc/tests/: conftest.py  test_data.py
