[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Usman Mushtaq", email = "usmanmushtaq__@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.5",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "pydantic",
    "flask",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.408",
    "pytest",
    "pytest-cov>=7.0.0",
    "ruff",
]

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly list packages to include in the wheel. Hatchling could not
# infer which package directory to include because the project name
# doesn't match any top-level package directory. Adjust the list below
# to include the package(s) you want shipped in the wheel.
packages = ["poc"]
